--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,26 @@
-# Core Data Science Libraries
-numpy==1.24.3
-pandas==2.0.3
-scipy==1.11.1
+# Network Intrusion Detection System (NIDS) - Dependencies
+# Python 3.9+
+
+# Core Data Science
+numpy>=1.21.0
+pandas>=1.3.0
 
 # Machine Learning
-scikit-learn==1.3.0
-
-# Deep Learning (for ANN/MLP)
-tensorflow==2.13.0
-keras==2.13.1
+scikit-learn>=1.0.0
 
 # Visualization
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.15.0
-
-# Jupyter Environment
-jupyter==1.0.0
-notebook==7.0.0
-ipykernel==6.25.0
+matplotlib>=3.4.0
+seaborn>=0.11.0
 
 # Utilities
-joblib==1.3.1
-tqdm==4.65.0
+scipy>=1.7.0
 
-# Data validation
-imbalanced-learn==0.11.0
+# Dataset Download
+kagglehub>=0.2.0
+
+# Jupyter Notebook (for development)
+jupyter>=1.0.0
+ipykernel>=6.0.0
+
+# Optional: For saving models
+joblib>=1.0.0
